test/Fail/Issue950a.err
Issue950a.agda:19.1-4: error: [CannotEliminateWithProjection]
Cannot eliminate type  A  with projection  x
when checking the clause left hand side
x f
